--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-264.5KB/s(Youtube:不良林), server: 213.183.53.214, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇳🇱 荷兰-396.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林), server: 213.183.53.179, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇨🇳 中国-11.91MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
-  - {name: 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林), server: 213.183.53.200, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇫🇷 法国-868.3KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇳🇱 荷兰-287.4KB/s(Youtube:不良林), server: 37.120.192.158, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-333.6KB/s(Youtube:不良林), server: 37.120.192.158, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇳🇱 荷兰-571.6KB/s(Youtube:不良林), server: 37.120.192.158, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林), server: 213.183.53.200, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
   - {name: 🇳🇱 荷兰-547.6KB/s(Youtube:不良林), server: 37.120.192.158, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇳🇱 荷兰-287.4KB/s(Youtube:不良林), server: 37.120.192.158, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-2.08MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.75.136.102, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-982.7KB/s(Youtube:不良林), server: 38.75.136.102, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-264.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-396.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-333.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-982.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-264.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-396.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-333.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-982.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-264.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-396.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-333.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-982.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-264.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-396.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-333.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-982.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-264.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-396.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-333.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-982.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-264.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-396.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-333.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-982.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-264.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-396.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-629.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-868.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-333.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-982.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
