--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇳🇱 荷兰-571.6KB/s(Youtube:不良林), server: 37.120.192.158, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林), server: 213.183.53.200, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇳🇱 荷兰-350.0KB/s(Youtube:不良林), server: 37.120.192.158, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-472.8KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇳🇱 荷兰-547.6KB/s(Youtube:不良林), server: 37.120.192.158, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-287.4KB/s(Youtube:不良林), server: 37.120.192.158, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-2.08MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-256.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-571.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
