--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇳🇱 荷兰-350.0KB/s(Youtube:不良林), server: 37.120.192.158, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-472.8KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇳🇱 荷兰-547.6KB/s(Youtube:不良林), server: 37.120.192.158, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-177.8KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇳🇱 荷兰-757.2KB/s(Youtube:不良林), server: 37.120.192.158, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-232.5KB/s(Youtube:不良林), server: 213.183.53.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-10.34MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
+  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-2.08MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.75.136.102, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-232.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-232.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-232.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-232.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-232.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-232.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-232.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
