--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇭🇰 香港-855.8KB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇺🇸 美国-788.5KB/s(Youtube:不良林), server: 38.75.136.102, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇭🇰 香港-707.3KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇫🇷 法国-632.4KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.75.136.102, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇷🇺 俄罗斯联邦-705.7KB/s(Youtube:不良林), server: 213.183.53.207, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇳🇱 荷兰-429.8KB/s(Youtube:不良林), server: 37.120.192.158, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-753.9KB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-2.08MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-820.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.75.136.102, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-279.9KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-707.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-429.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-707.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-429.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-707.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-429.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-707.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-707.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-429.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-707.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-429.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-707.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-429.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-707.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-632.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-429.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
